# collvoid

collvoid_controller/: CMakeLists.txt
collvoid_controller/src/collvoid_controller/: candle_controller.py  candle_controller.py.bak  candle_controller_robots.py  collvoid_visualizer.py  controller.py  detect_obstacles.py  mapinfo_visualizer.py  position_share_controller_candle.py
collvoid_dwa_local_planner/include/collvoid_dwa_local_planner/: dwa_planner.h  dwa_planner_ros.h
collvoid_dwa_local_planner/src/: dwa_planner.cpp  dwa_planner_ros.cpp
collvoid_local_planner/: CMakeLists.txt
collvoid_local_planner/src/: Agent.cpp  ROSAgent.cpp  clearpath.cpp  collvoid_local_planner.cpp  collvoid_publishers.cpp  collvoid_scoring_function.cpp  me_publisher.cpp  me_publisher_candle.cpp
collvoid_simple_global_planner/: CMakeLists.txt
collvoid_stage/: CMakeLists.txt  goals.yaml  multi_view.rviz  oneways.yaml  stations.yaml
collvoid_stage/launch/: move_base_collvoid.launch  move_base_collvoid_legacy.launch  move_base_dwa.launch
collvoid_stage/params/: collvoid_common_candle.yaml  costmap_common_candle.yaml  move_base_params_bad.yaml  move_base_params_candle.yaml  move_base_params_good.yaml  move_base_params_turtle.yaml  preset.yaml  stations.yaml  teb_local_planner_params.yaml
collvoid_stage/scripts/: candle_create.py  create.py  create_random_goals.py  me_pub_test.sh
collvoid_stage/world/: 1_Q.yaml  candle_map.pgm  candle_map.world  candle_map.yaml  sim_map.pgm  sim_map.world  sim_map.xcf
experimental/pacman_controller/: CMakeLists.txt
(+6 files in other folders)
